<resources>
    <string name="app_name">SamSebeTrener</string>
    <string name="tv_pl_name">The list will be here</string>
    <string name="createAccountTextView">Создайте аккаунт</string>
    <string name="user_login">Введите логин</string>
    <string name="user_email">Введите email</string>
    <string name="user_pass">Введите пароль</string>
    <string name="button_reg">Создать аккаунт</string>
    <string name="kro_hochet_zanimatsa">Для тех, кто хочет заниматься в зале самостоятельно</string>
    <string name="sam">САМ</string>
    <string name="sebe">СЕБЕ</string>
    <string name="trener">ТРЕНЕР</string>
    <string name="alexcemencompany">AlexcemenCompany©</string>
    <string name="loginAccountTextViewAuth">Войдите в аккаунт</string>
    <string name="enter">Войти</string>
    <string name="registerTextView">Зарегестрироваться</string>
    <string name="loginAccountTextView">Войти в аккаунт</string>

</resources>

